--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 asgiref==3.7.2
-Django==3.2.21
+Django==4.2.5
 django-bootstrap5==23.3
-django-widget-tweaks==1.4.12
-mysqlclient==2.1.1
+django-widget-tweaks==1.5.0
+mysqlclient==2.2.0
+psycopg2==2.9.7
 PyMySQL==1.1.0
 sqlparse==0.4.4
 tzdata==2023.3
-gunicorn==19.7.1
